--- a/source/sass/blocks/advantages.scss
+++ b/source/sass/blocks/advantages.scss
@@ -65,15 +65,19 @@
 @media (min-width: $desktop-width) {
     .advantages__item {
         width: 33%;
+        margin-bottom: 83px;
+        padding-left: 79px;
     }
 
     .advantages__info {
-        max-width: 180px;
+        max-width: 182px;
     }
 
     .advantages__title {
         margin-bottom: 84px;
         font-size: 30px;
         line-height: 35px;
+        margin-top: 141px;
+        padding-left: 41px;
     }
 }
