--- a/source/sass/blocks/global.scss
+++ b/source/sass/blocks/global.scss
@@ -12,6 +12,7 @@ body {
     min-width: 320px;
     background-color: #EFF0F1;
     font-family: 'Raleway', sans-serif;
+    overflow-x: hidden;
 
 }
 
