--- a/source/sass/blocks/land.scss
+++ b/source/sass/blocks/land.scss
@@ -1,5 +1,4 @@
 .land {
-    display: flex;
     flex-direction: column;
 }
 
@@ -54,10 +53,17 @@
 }
 
 @media (min-width: $desktop-width) {
+
+    .land {
+        margin-bottom: 105px;
+    }
+
     .land__img--desktop {
         display: block;
-        width: 570px;
+        width: 550px;
         height: 488px;
+        margin-top: -156px;
+        margin-right: 82px;
     }
 
     .land__inner {
@@ -71,13 +77,25 @@
         height: 55px;
     }
 
+    .land__title {
+        font-weight: bold;
+        font-size: 30px;
+        line-height: 35px;
+        text-align: left;
+        margin-bottom: 26px;
+    }
+
     .land__description {
         width: 430px;
         text-align: left;
         font-size: 15px;
         line-height: 18px;
-
         color: #161616;
+        margin-bottom: 50px;
+    }
+
+    .land__info {
+        padding-left: 20px;
 
     }
 }
