--- a/source/sass/blocks/products.scss
+++ b/source/sass/blocks/products.scss
@@ -100,13 +100,19 @@
     }
 
     .products__item-title {
-        padding: 44px 0 33px 0;
+        padding: 0;
+        //  padding: 49px 0 33px 0;
         text-align: left;
         font-weight: bold;
         padding-left: 30px;
         font-weight: 600;
         font-size: 18px;
         line-height: 21px;
+        max-width: 270px;
+        height: 115px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
     }
 
     .products__item--center {
@@ -116,7 +122,4 @@
     .products__item--center .products__item-title {
         padding: 34px 30px;
     }
-
-
-
 }
