--- a/source/css/style.css
+++ b/source/css/style.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 *,
 *::after,
 ::before {
@@ -166,14 +167,14 @@ header {
     font-size: 13px;
     line-height: 15px;
     letter-spacing: 0.1em;
-    color: #FFFFFF;
+    color: #ffffff;
     text-decoration: none;
     max-width: 130px; }
   .navigation__contacts-adress {
     font-size: 10px;
     line-height: 15px;
     letter-spacing: 0.1em;
-    color: #FFFFFF;
+    color: #ffffff;
     margin-right: 10px; }
   .navigation__item {
     padding-bottom: 0; } }
@@ -191,17 +192,17 @@ header {
   position: relative; }
 
 .main__slider-btn {
+  font-size: 14px;
+  line-height: 16px;
+  font-weight: bold;
   width: 168px;
   height: 55px;
   background-color: #FFE500;
   color: #161616;
   border: none;
-  font-weight: 700;
   -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
           box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   margin-bottom: 47px;
-  font-size: 14px;
-  line-height: 16px;
   text-align: center;
   letter-spacing: 0.13em;
   text-transform: uppercase;
@@ -220,22 +221,22 @@ header {
   .main__slider {
     position: relative; }
   .main__slider-title {
-    max-width: 520px;
-    font-weight: bold;
     font-size: 26px;
     line-height: 44px;
+    font-weight: bold;
+    max-width: 520px;
     letter-spacing: 0.12em;
     text-transform: uppercase;
     margin-top: 164px;
     margin-bottom: 47px;
-    color: #FFFFFF; }
+    color: #ffffff; }
   .main__slider-pages {
+    font-size: 18px;
+    line-height: 21px;
+    font-weight: bold;
     position: absolute;
     left: 554px;
-    bottom: 39px;
-    font-weight: normal;
-    font-size: 18px;
-    line-height: 21px; }
+    bottom: 39px; }
   .main__slider-bg {
     display: block;
     width: 972px;
@@ -245,11 +246,20 @@ header {
     right: -400px;
     z-index: 2; }
   .main__slider-btn {
-    width: 214px;
-    height: 60px;
-    font-weight: bold;
     font-size: 18px;
     line-height: 21px;
+    font-weight: bold;
+    width: 214px;
+    padding: 30px 0;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
     text-align: center;
     letter-spacing: 0.13em;
     text-transform: uppercase;
@@ -263,9 +273,9 @@ header {
   margin-bottom: 35px; }
 
 .advantages__number {
-  font-weight: 600;
   font-size: 20px;
   line-height: 21px;
+  font-weight: 600;
   text-align: center;
   letter-spacing: 3px;
   text-transform: uppercase;
@@ -273,18 +283,18 @@ header {
   padding: 15px 12px 15px 12px; }
 
 .advantages__title {
-  font-weight: 600;
   font-size: 20px;
   line-height: 23px;
+  font-weight: 600;
   text-align: center;
   color: #161616;
   margin-bottom: 30px;
   margin-top: 60px; }
 
 .advantages__info {
-  font-weight: 600;
   font-size: 16px;
   line-height: 19px;
+  font-weight: 600;
   color: #48494D;
   margin-left: 40px; }
 
@@ -305,26 +315,27 @@ header {
 
 @media (min-width: 1300px) {
   .advantages__item {
-    width: 33%;
+    width: 33.333%;
     margin-bottom: 83px;
-    padding-left: 79px; }
+    padding: 0 15px; }
   .advantages__info {
     max-width: 182px; }
   .advantages__title {
-    margin-bottom: 84px;
     font-size: 30px;
     line-height: 35px;
+    font-weight: 600;
     padding-top: 141px;
-    padding-left: 41px; } }
+    padding-left: 41px;
+    margin-bottom: 84px; } }
 
 .form {
   padding: 56px 0 60px 0;
-  background-color: #FFFFFF; }
+  background-color: #ffffff; }
 
 .form__title {
-  font-weight: bold;
   font-size: 18px;
   line-height: 21px;
+  font-weight: bold;
   text-align: center;
   letter-spacing: 0.12em;
   text-transform: uppercase;
@@ -344,49 +355,50 @@ header {
 .form__name::-webkit-input-placeholder, .form__number::-webkit-input-placeholder {
   font-size: 16px;
   line-height: 19px;
+  font-weight: 400;
   color: #161616;
-  opacity: 0.5;
-  padding-left: 17px; }
+  opacity: 0.5; }
 
 .form__name::-moz-placeholder, .form__number::-moz-placeholder {
   font-size: 16px;
   line-height: 19px;
+  font-weight: 400;
   color: #161616;
-  opacity: 0.5;
-  padding-left: 17px; }
+  opacity: 0.5; }
 
 .form__name:-ms-input-placeholder, .form__number:-ms-input-placeholder {
   font-size: 16px;
   line-height: 19px;
+  font-weight: 400;
   color: #161616;
-  opacity: 0.5;
-  padding-left: 17px; }
+  opacity: 0.5; }
 
 .form__name::-ms-input-placeholder, .form__number::-ms-input-placeholder {
   font-size: 16px;
   line-height: 19px;
+  font-weight: 400;
   color: #161616;
-  opacity: 0.5;
-  padding-left: 17px; }
+  opacity: 0.5; }
 
 .form__name::placeholder,
 .form__number::placeholder {
   font-size: 16px;
   line-height: 19px;
+  font-weight: 400;
   color: #161616;
-  opacity: 0.5;
-  padding-left: 17px; }
+  opacity: 0.5; }
 
 .form__button {
-  background: #161616;
-  font-weight: 600;
   font-size: 12px;
   line-height: 14px;
+  font-weight: 600;
+  background: #161616;
   letter-spacing: 0.07em;
   width: 100%;
-  height: 50px;
+  padding: 18px 0;
   border: none;
-  color: #FFFFFF; }
+  color: #ffffff;
+  cursor: pointer; }
 
 @media (min-width: 1300px) {
   .form {
@@ -394,9 +406,9 @@ header {
     padding-left: 110px;
     padding-bottom: 80px; }
   .form__title {
-    font-weight: bold;
     font-size: 25px;
     line-height: 35px;
+    font-weight: bold;
     letter-spacing: 0.13em;
     text-transform: uppercase;
     color: #161616;
@@ -404,34 +416,46 @@ header {
     margin: 0 auto;
     margin-bottom: 26px; }
   .form__box {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -ms-flex-item-align: center;
+        align-self: center;
     text-align: center; }
   .form__name,
   .form__number {
     width: 249px;
     height: 55px;
     margin-right: 12px;
-    padding-left: 3px; }
+    margin-bottom: 0; }
   .form__button {
     width: 170px;
-    height: 50px; } }
+    padding: 18px 0; } }
+
+.map {
+  background-color: #ffffff; }
 
 .map__title {
   font-size: 20px;
+  line-height: 21px;
+  font-weight: 600;
   text-align: center;
   color: #161616;
-  font-weight: 600;
-  margin-top: 60px;
+  padding-top: 60px;
   margin-bottom: 25px; }
 
 .map__img {
+  display: block;
   vertical-align: top;
   margin-bottom: 48px;
-  margin: 0 auto;
-  display: block; }
+  margin: 0 auto; }
 
 @media (min-width: 1300px) {
   .map {
-    margin-bottom: 243px; }
+    padding-bottom: 243px; }
   .map__title {
     margin-bottom: 46px;
     font-weight: 600;
@@ -492,9 +516,9 @@ header {
 
 .products__title {
   font-size: 20px;
-  text-align: center;
-  font-weight: 600;
   line-height: 23px;
+  font-weight: 600;
+  text-align: center;
   color: #161616;
   margin-top: 60px;
   margin-bottom: 44px;
@@ -502,9 +526,9 @@ header {
   text-transform: uppercase; }
 
 .products__item-title {
-  font-weight: 600;
   font-size: 16px;
   line-height: 21px;
+  font-weight: 600;
   text-align: center;
   letter-spacing: 3px;
   text-transform: uppercase;
@@ -521,23 +545,27 @@ header {
 
 @media (min-width: 1300px) {
   .products__title {
+    font-size: 26px;
+    line-height: 23px;
+    font-weight: 700;
     margin-top: 222px;
     margin-bottom: 75px;
-    font-weight: 700;
-    font-size: 26px;
     margin-left: 70px;
     text-transform: none; }
   .products__item {
     max-width: 370px;
     margin-bottom: 44px; }
+  .products__item:hover {
+    -webkit-transform: translate(0, -50px);
+            transform: translate(0, -50px); }
   .products__item-title {
+    font-size: 18px;
+    line-height: 21px;
+    font-weight: 600;
     padding: 0;
     text-align: left;
     font-weight: bold;
     padding-left: 30px;
-    font-weight: 600;
-    font-size: 18px;
-    line-height: 21px;
     max-width: 270px;
     height: 115px;
     display: -webkit-box;
@@ -558,7 +586,8 @@ header {
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
-          flex-direction: column; }
+          flex-direction: column;
+  background-color: #ffffff; }
 
 .land__img {
   -webkit-box-ordinal-group: 3;
@@ -577,37 +606,38 @@ header {
 .land__title {
   font-size: 18px;
   line-height: 21px;
+  font-weight: bold;
   text-align: center;
   letter-spacing: 0.12em;
   text-transform: uppercase;
   color: #161616;
-  font-weight: bold;
   margin-bottom: 20px; }
 
 .land__description {
   font-size: 15px;
   line-height: 18px;
+  font-weight: normal;
   text-align: center;
   color: #161616;
   margin-bottom: 30px; }
 
 .land__button {
-  width: 100%;
-  height: 55px;
-  font-weight: bold;
   font-size: 12px;
   line-height: 14px;
+  font-weight: bold;
+  width: 100%;
+  padding: 21px 0;
   text-align: center;
   letter-spacing: 2px;
   text-transform: uppercase;
   border: none;
-  color: #FFFFFF;
+  color: #ffffff;
   background: #161616;
   margin-bottom: 102px; }
 
 @media (min-width: 1300px) {
   .land {
-    margin-bottom: 105px; }
+    padding-bottom: 105px; }
   .land__img--desktop {
     display: block;
     width: 550px;
@@ -626,19 +656,22 @@ header {
         -ms-flex-pack: justify;
             justify-content: space-between; }
   .land__button {
-    width: 277px;
-    height: 55px; }
+    margin: 0; }
+  .land__button:hover {
+    background-color: #FFE500;
+    color: #161616; }
   .land__title {
-    font-weight: bold;
     font-size: 30px;
     line-height: 35px;
+    font-weight: bold;
     text-align: left;
     margin-bottom: 26px; }
   .land__description {
-    width: 430px;
-    text-align: left;
     font-size: 15px;
     line-height: 18px;
+    font-weight: normal;
+    width: 430px;
+    text-align: left;
     color: #161616;
     margin-bottom: 50px; }
   .land__info {
@@ -651,32 +684,31 @@ header {
   padding-top: 250px; }
 
 .warehouses__title {
-  font-weight: bold;
   font-size: 18px;
   line-height: 21px;
+  font-weight: bold;
   text-align: center;
   letter-spacing: 0.12em;
   text-transform: uppercase;
-  color: #FFFFFF; }
+  color: #ffffff; }
 
 .warehouses__description {
-  font-weight: normal;
   font-size: 15px;
   line-height: 18px;
+  font-weight: normal;
   text-align: center;
-  color: #FFFFFF;
+  color: #ffffff;
   margin-bottom: 30px; }
 
 .warehouses__button {
-  font-weight: bold;
   font-size: 12px;
   line-height: 14px;
+  font-weight: bold;
   letter-spacing: 2px;
   text-transform: uppercase;
   text-align: center;
-  color: #FFFFFF;
-  height: 55px;
-  border: 1px solid #FFFFFF;
+  color: #ffffff;
+  border: 1px solid #ffffff;
   padding: 21px 0 17px 0; }
 
 .warehouses__img {
@@ -696,28 +728,24 @@ header {
     padding-top: 187px;
     padding-bottom: 127px; }
   .warehouses__description {
-    max-width: 500px;
-    text-align: left;
-    font-style: normal;
-    font-weight: normal;
     font-size: 15px;
     line-height: 18px;
+    font-weight: normal;
+    max-width: 500px;
+    text-align: left;
     margin-bottom: 46px;
-    color: #FFFFFF; }
+    color: #ffffff; }
   .warehouses__title {
-    font-weight: bold;
     font-size: 30px;
     line-height: 35px;
+    font-weight: bold;
     letter-spacing: 0.13em;
     text-transform: uppercase;
     text-align: left;
     margin-bottom: 33px;
-    color: #FFFFFF; }
+    color: #ffffff; }
   .warehouses__info {
     padding-left: 20px; }
-  .warehouses__button {
-    width: 277px;
-    height: 55px; }
   .warehouses__img {
     position: absolute;
     -webkit-transform: none;
@@ -734,5 +762,200 @@ header {
 @media (min-width: 1300px) {
   .footer__header {
     padding: 49px 0 49px 0; } }
+
+.button-consultation {
+  width: 275px;
+  padding: 21px 0;
+  cursor: pointer; }
+
+/*Центрирование по середине экрана*/
+.dws {
+  position: fixed;
+  top: 90%;
+  right: 0;
+  -webkit-transform: translate(-90%, -90%);
+          transform: translate(-90%, -90%);
+  z-index: 999; }
+
+.pulse,
+.block,
+.phone {
+  position: absolute;
+  width: 90px;
+  height: 90px;
+  color: #fff;
+  text-align: center;
+  border-radius: 50%; }
+
+.block {
+  cursor: pointer;
+  z-index: 1;
+  overflow: hidden; }
+
+.pulse {
+  text-align: center;
+  background: #5cc2e2;
+  position: relative;
+  -webkit-transition: 5s;
+  transition: 5s; }
+
+.phone {
+  font-size: 50px;
+  line-height: 94px;
+  -webkit-animation: phone .9s ease-in-out infinite;
+          animation: phone .9s ease-in-out infinite; }
+
+.text {
+  opacity: 0;
+  position: absolute;
+  text-transform: uppercase;
+  font-weight: 700;
+  font-size: 15px;
+  top: 28px;
+  -webkit-transform: scaleX(-1);
+          transform: scaleX(-1);
+  -webkit-transition: .5s ease-in-out;
+  transition: .5s ease-in-out; }
+
+.phone i {
+  -webkit-transition: .5s ease-in-out;
+  transition: .5s ease-in-out; }
+
+.pulse:hover {
+  background: #29aee3; }
+
+.pulse:hover i {
+  -webkit-transition: .5s ease-in-out;
+  transition: .5s ease-in-out;
+  -webkit-transform: scale(0);
+          transform: scale(0); }
+
+.pulse:hover .text {
+  -webkit-transform: scaleX(1);
+          transform: scaleX(1);
+  -webkit-transition: .5s ease-in-out;
+  transition: .5s ease-in-out;
+  opacity: 1; }
+
+.pulse:hover::before,
+.pulse:hover::after {
+  content: "";
+  position: absolute;
+  border: 1px solid #29aee3;
+  left: -20px;
+  right: -20px;
+  top: -20px;
+  bottom: -20px;
+  border-radius: 50%;
+  -webkit-animation: pulse 1.5s linear infinite;
+          animation: pulse 1.5s linear infinite; }
+
+.pulse:hover::after {
+  -webkit-animation-delay: .5s;
+          animation-delay: .5s; }
+
+@-webkit-keyframes phone {
+  0%,
+  100% {
+    -webkit-transform: rotate(-20deg);
+            transform: rotate(-20deg); }
+  50% {
+    -webkit-transform: rotate(21deg);
+            transform: rotate(21deg); } }
+
+@keyframes phone {
+  0%,
+  100% {
+    -webkit-transform: rotate(-20deg);
+            transform: rotate(-20deg); }
+  50% {
+    -webkit-transform: rotate(21deg);
+            transform: rotate(21deg); } }
+
+@-webkit-keyframes pulse {
+  0% {
+    -webkit-transform: scale(0.5);
+            transform: scale(0.5);
+    opacity: 0; }
+  50% {
+    opacity: 1; }
+  100% {
+    -webkit-transform: scale(1.2);
+            transform: scale(1.2);
+    opacity: 0; } }
+
+@keyframes pulse {
+  0% {
+    -webkit-transform: scale(0.5);
+            transform: scale(0.5);
+    opacity: 0; }
+  50% {
+    opacity: 1; }
+  100% {
+    -webkit-transform: scale(1.2);
+            transform: scale(1.2);
+    opacity: 0; } }
+
+.box {
+  width: 300px;
+  padding: 40px;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  background: #191919;
+  text-align: center;
+  z-index: 999;
+  display: none; }
+
+.box h1 {
+  color: #ffffff;
+  text-transform: uppercase;
+  font-weight: 500; }
+
+.box input[type="text"],
+.box input[type="email"] {
+  border: 0;
+  background: none;
+  display: block;
+  margin: 20px auto;
+  text-align: center;
+  border: 2px solid #3498db;
+  padding: 14px 10px;
+  width: 200px;
+  outline: none;
+  color: white;
+  border-radius: 24px;
+  -webkit-transition: 0.25s;
+  transition: 0.25s; }
+
+.box input[type="submit"] {
+  border: 0;
+  background: none;
+  display: block;
+  margin: 20px auto;
+  text-align: center;
+  border: 2px solid #2ecc71;
+  padding: 14px 40px;
+  width: 200px;
+  outline: none;
+  color: white;
+  border-radius: 24px;
+  -webkit-transition: 0.25s;
+  transition: 0.25s;
+  cursor: pointer; }
+
+.box input[type="submit"]:hover {
+  background: #2ecc71; }
+
+.close {
+  color: #aaa;
+  font-size: 50px;
+  font-weight: bold;
+  cursor: pointer;
+  position: absolute;
+  top: -10px;
+  right: 10px; }
 
 /*# sourceMappingURL=style.css.map */
