--- a/source/sass/blocks/global.scss
+++ b/source/sass/blocks/global.scss
@@ -5,7 +5,6 @@
     padding: 0;
     box-sizing: border-box;
     font-family: 'Raleway', sans-serif;
-
 }
 
 body {
@@ -13,7 +12,6 @@ body {
     background-color: #EFF0F1;
     font-family: 'Raleway', sans-serif;
     overflow-x: hidden;
-
 }
 
 .container {
@@ -25,9 +23,8 @@ img {
     height: auto;
 }
 
-
 .pages__number {
     font-size: 18px;
-    color: #ffffff;
+    color: $white;
     margin-left: auto;
 }
