--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -1,5 +1,5 @@
 header {
-    background-color: #161616;
+    background-color: $black;
     background: url("../../images/main-bg.jpg") no-repeat;
     opacity: 1;
     padding-top: 30px;
@@ -21,7 +21,7 @@ header {
 
 @media (min-width: $desktop-width) {
     .header {
-        background-color: #161616;
+        background-color: $black;
         height: 600px;
         background-image: none;
         position: relative;
@@ -40,7 +40,6 @@ header {
         display: flex;
         justify-content: space-between;
         align-items: center;
-
     }
 
     .header-logo__img {
