--- a/source/sass/blocks/map.scss
+++ b/source/sass/blocks/map.scss
@@ -1,24 +1,26 @@
+.map {
+    background-color: $white;
+}
+
 .map__title {
-    font-size: 20px;
+    @include font-text(20px, 21px, 600);
     text-align: center;
-    color: #161616;
-    font-weight: 600;
-    margin-top: 60px;
+    color: $black;
+    padding-top: 60px;
     margin-bottom: 25px;
 }
 
 .map__img {
+    display: block;
     vertical-align: top;
     margin-bottom: 48px;
     margin: 0 auto;
-    display: block;
 }
 
 
 @media (min-width: $desktop-width) {
-
     .map {
-        margin-bottom: 243px;
+        padding-bottom: 243px;
     }
 
     .map__title {
