--- a/source/sass/blocks/navigation.scss
+++ b/source/sass/blocks/navigation.scss
@@ -39,6 +39,7 @@
 }
 
 
+
 @media (min-width: $desktop-width) {
 
     .navigation {
@@ -76,7 +77,7 @@
         font-size: 13px;
         line-height: 15px;
         letter-spacing: 0.1em;
-        color: #FFFFFF;
+        color: $white;
         text-decoration: none;
         max-width: 130px;
     }
@@ -85,7 +86,7 @@
         font-size: 10px;
         line-height: 15px;
         letter-spacing: 0.1em;
-        color: #FFFFFF;
+        color: $white;
         margin-right: 10px;
     }
 
