--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -11,3 +11,6 @@
 @import "blocks/land.scss";
 @import "blocks/warehouses.scss";
 @import "blocks/footer.scss";
+@import "blocks/button.scss";
+@import "blocks/telephone.scss";
+@import "blocks/modal.scss";
