--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,6 +1,6 @@
-@import "blocks/var.scss";
-@import "blocks/mixin.scss";
-@import "blocks/global.scss";
+@import "general/mixin.scss";
+@import "general/var.scss";
+@import "general/global.scss";
 @import "blocks/header.scss";
 @import "blocks/navigation.scss";
 @import "blocks/main.scss";
