--- a/source/css/style.css
+++ b/source/css/style.css
@@ -18,10 +18,11 @@ body {
   margin: 0 auto;
   padding: 0 16px;
   max-width: 320px; }
-  @media (min-width: 768px) {
+  @media (min-width: 568px) {
     .container {
       margin: 0 auto;
-      max-width: 768px; } }
+      padding: 0 15px;
+      max-width: 568px; } }
   @media (min-width: 1300px) {
     .container {
       margin: 0 auto;
@@ -40,6 +41,7 @@ img {
 header {
   background-color: #161616;
   background: url("../../images/main-bg.jpg") no-repeat;
+  background-size: cover;
   opacity: 1;
   padding-top: 30px;
   padding-bottom: 22px; }
@@ -195,7 +197,7 @@ header {
   font-size: 14px;
   line-height: 16px;
   font-weight: bold;
-  width: 168px;
+  min-width: 168px;
   height: 55px;
   background-color: #FFE500;
   color: #161616;
@@ -217,9 +219,31 @@ header {
 .main__slider-pages {
   text-align: right; }
 
+@media (min-width: 568px) {
+  .main__slider {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center; }
+  .main__slider-title {
+    text-align: center;
+    margin: 0 auto 120px; }
+  .main__slider-btn {
+    width: 350px; } }
+
 @media (min-width: 1300px) {
   .main__slider {
-    position: relative; }
+    position: relative;
+    display: block; }
   .main__slider-title {
     font-size: 26px;
     line-height: 44px;
@@ -227,6 +251,7 @@ header {
     max-width: 520px;
     letter-spacing: 0.12em;
     text-transform: uppercase;
+    margin: 0;
     margin-top: 164px;
     margin-bottom: 47px;
     color: #ffffff; }
@@ -289,7 +314,7 @@ header {
   text-align: center;
   color: #161616;
   margin-bottom: 30px;
-  margin-top: 60px; }
+  padding-top: 60px; }
 
 .advantages__info {
   font-size: 16px;
@@ -298,7 +323,7 @@ header {
   color: #48494D;
   margin-left: 40px; }
 
-@media (min-width: 574px) {
+@media (min-width: 568px) {
   .advantages {
     background-color: #ffffff; }
   .advantages__inner {
@@ -311,7 +336,9 @@ header {
     -ms-flex-wrap: wrap;
         flex-wrap: wrap; }
   .advantages__item {
-    width: 50%; } }
+    width: 48%; }
+  .advantages__info {
+    margin-left: 10px; } }
 
 @media (min-width: 1300px) {
   .advantages__item {
@@ -452,6 +479,10 @@ header {
   vertical-align: top;
   margin-bottom: 48px;
   margin: 0 auto; }
+
+@media (min-width: 568px) {
+  .map__title {
+    padding-top: 25px; } }
 
 @media (min-width: 1300px) {
   .map {
@@ -595,9 +626,6 @@ header {
           order: 2;
   vertical-align: top; }
 
-.land__img--desktop {
-  display: none; }
-
 .land__inner {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -634,6 +662,26 @@ header {
   color: #ffffff;
   background: #161616;
   margin-bottom: 102px; }
+
+@media (min-width: 568px) {
+  .land__inner {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column; }
+  .land__info {
+    -webkit-box-ordinal-group: 3;
+        -ms-flex-order: 2;
+            order: 2; }
+  .land__img--desktop {
+    padding-top: 40px;
+    padding-bottom: 20px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-ordinal-group: 2;
+        -ms-flex-order: 1;
+            order: 1; } }
 
 @media (min-width: 1300px) {
   .land {
@@ -768,133 +816,130 @@ header {
   padding: 21px 0;
   cursor: pointer; }
 
+@media (min-width: 568px) {
+  .button-consultation {
+    margin: 0 auto; } }
+
+@media (min-width: 1300px) {
+  .button-consultation {
+    margin: 0; } }
+
 /*Центрирование по середине экрана*/
 .dws {
-  position: fixed;
-  top: 90%;
-  right: 0;
-  -webkit-transform: translate(-90%, -90%);
-          transform: translate(-90%, -90%);
-  z-index: 999; }
+  display: none; }
 
-.pulse,
-.block,
-.phone {
-  position: absolute;
-  width: 90px;
-  height: 90px;
-  color: #fff;
-  text-align: center;
-  border-radius: 50%; }
-
-.block {
-  cursor: pointer;
-  z-index: 1;
-  overflow: hidden; }
-
-.pulse {
-  text-align: center;
-  background: #5cc2e2;
-  position: relative;
-  -webkit-transition: 5s;
-  transition: 5s; }
-
-.phone {
-  font-size: 50px;
-  line-height: 94px;
-  -webkit-animation: phone .9s ease-in-out infinite;
-          animation: phone .9s ease-in-out infinite; }
-
-.text {
-  opacity: 0;
-  position: absolute;
-  text-transform: uppercase;
-  font-weight: 700;
-  font-size: 15px;
-  top: 28px;
-  -webkit-transform: scaleX(-1);
-          transform: scaleX(-1);
-  -webkit-transition: .5s ease-in-out;
-  transition: .5s ease-in-out; }
-
-.phone i {
-  -webkit-transition: .5s ease-in-out;
-  transition: .5s ease-in-out; }
-
-.pulse:hover {
-  background: #29aee3; }
-
-.pulse:hover i {
-  -webkit-transition: .5s ease-in-out;
-  transition: .5s ease-in-out;
-  -webkit-transform: scale(0);
-          transform: scale(0); }
-
-.pulse:hover .text {
-  -webkit-transform: scaleX(1);
-          transform: scaleX(1);
-  -webkit-transition: .5s ease-in-out;
-  transition: .5s ease-in-out;
-  opacity: 1; }
-
-.pulse:hover::before,
-.pulse:hover::after {
-  content: "";
-  position: absolute;
-  border: 1px solid #29aee3;
-  left: -20px;
-  right: -20px;
-  top: -20px;
-  bottom: -20px;
-  border-radius: 50%;
-  -webkit-animation: pulse 1.5s linear infinite;
-          animation: pulse 1.5s linear infinite; }
-
-.pulse:hover::after {
-  -webkit-animation-delay: .5s;
-          animation-delay: .5s; }
-
-@-webkit-keyframes phone {
-  0%,
-  100% {
-    -webkit-transform: rotate(-20deg);
-            transform: rotate(-20deg); }
-  50% {
-    -webkit-transform: rotate(21deg);
-            transform: rotate(21deg); } }
-
-@keyframes phone {
-  0%,
-  100% {
-    -webkit-transform: rotate(-20deg);
-            transform: rotate(-20deg); }
-  50% {
-    -webkit-transform: rotate(21deg);
-            transform: rotate(21deg); } }
-
-@-webkit-keyframes pulse {
-  0% {
-    -webkit-transform: scale(0.5);
-            transform: scale(0.5);
-    opacity: 0; }
-  50% {
+@media (min-width: 1300px) {
+  .dws {
+    position: fixed;
+    top: 90%;
+    right: 0;
+    -webkit-transform: translate(-90%, -90%);
+            transform: translate(-90%, -90%);
+    z-index: 999; }
+  .pulse,
+  .block,
+  .phone {
+    position: absolute;
+    width: 90px;
+    height: 90px;
+    color: #fff;
+    text-align: center;
+    border-radius: 50%; }
+  .block {
+    cursor: pointer;
+    z-index: 1;
+    overflow: hidden; }
+  .pulse {
+    text-align: center;
+    background: #5cc2e2;
+    position: relative;
+    -webkit-transition: 5s;
+    transition: 5s; }
+  .phone {
+    font-size: 50px;
+    line-height: 94px;
+    -webkit-animation: phone .9s ease-in-out infinite;
+            animation: phone .9s ease-in-out infinite; }
+  .text {
+    opacity: 0;
+    position: absolute;
+    text-transform: uppercase;
+    font-weight: 700;
+    font-size: 15px;
+    top: 28px;
+    -webkit-transform: scaleX(-1);
+            transform: scaleX(-1);
+    -webkit-transition: .5s ease-in-out;
+    transition: .5s ease-in-out; }
+  .phone i {
+    -webkit-transition: .5s ease-in-out;
+    transition: .5s ease-in-out; }
+  .pulse:hover {
+    background: #29aee3; }
+  .pulse:hover i {
+    -webkit-transition: .5s ease-in-out;
+    transition: .5s ease-in-out;
+    -webkit-transform: scale(0);
+            transform: scale(0); }
+  .pulse:hover .text {
+    -webkit-transform: scaleX(1);
+            transform: scaleX(1);
+    -webkit-transition: .5s ease-in-out;
+    transition: .5s ease-in-out;
     opacity: 1; }
-  100% {
-    -webkit-transform: scale(1.2);
-            transform: scale(1.2);
-    opacity: 0; } }
-
-@keyframes pulse {
-  0% {
-    -webkit-transform: scale(0.5);
-            transform: scale(0.5);
-    opacity: 0; }
-  50% {
-    opacity: 1; }
-  100% {
-    -webkit-transform: scale(1.2);
-            transform: scale(1.2);
-    opacity: 0; } }
+  .pulse:hover::before,
+  .pulse:hover::after {
+    content: "";
+    position: absolute;
+    border: 1px solid #29aee3;
+    left: -20px;
+    right: -20px;
+    top: -20px;
+    bottom: -20px;
+    border-radius: 50%;
+    -webkit-animation: pulse 1.5s linear infinite;
+            animation: pulse 1.5s linear infinite; }
+  .pulse:hover::after {
+    -webkit-animation-delay: .5s;
+            animation-delay: .5s; }
+  @-webkit-keyframes phone {
+    0%,
+    100% {
+      -webkit-transform: rotate(-20deg);
+              transform: rotate(-20deg); }
+    50% {
+      -webkit-transform: rotate(21deg);
+              transform: rotate(21deg); } }
+  @keyframes phone {
+    0%,
+    100% {
+      -webkit-transform: rotate(-20deg);
+              transform: rotate(-20deg); }
+    50% {
+      -webkit-transform: rotate(21deg);
+              transform: rotate(21deg); } }
+  @-webkit-keyframes pulse {
+    0% {
+      -webkit-transform: scale(0.5);
+              transform: scale(0.5);
+      opacity: 0; }
+    50% {
+      opacity: 1; }
+    100% {
+      -webkit-transform: scale(1.2);
+              transform: scale(1.2);
+      opacity: 0; } }
+  @keyframes pulse {
+    0% {
+      -webkit-transform: scale(0.5);
+              transform: scale(0.5);
+      opacity: 0; }
+    50% {
+      opacity: 1; }
+    100% {
+      -webkit-transform: scale(1.2);
+              transform: scale(1.2);
+      opacity: 0; } } }
 
 .box {
   width: 300px;
