--- a/source/sass/blocks/telephone.scss
+++ b/source/sass/blocks/telephone.scss
@@ -1,113 +1,103 @@
 /*Центрирование по середине экрана*/
+
 .dws {
-    position: fixed;
-    top: 90%;
-    right: 0;
-    transform: translate(-90%, -90%);
-    z-index: 999;
+    display: none;
 }
 
-.pulse,
-.block,
-.phone {
-    position: absolute;
-    width: 90px;
-    height: 90px;
-    color: #fff;
-    text-align: center;
-    border-radius: 50%;
-}
-
-.block {
-    cursor: pointer;
-    z-index: 1;
-    overflow: hidden;
-}
-
-.pulse {
-    text-align: center;
-    background: #5cc2e2;
-    position: relative;
-    transition: 5s;
-}
-
-.phone {
-    font-size: 50px;
-    line-height: 94px;
-    animation: phone .9s ease-in-out infinite;
-}
-
-.text {
-    opacity: 0;
-    position: absolute;
-    text-transform: uppercase;
-    font-weight: 700;
-    font-size: 15px;
-    top: 28px;
-    transform: scaleX(-1);
-    transition: .5s ease-in-out;
-}
-
-.phone i {
-    transition: .5s ease-in-out;
-}
-
-.pulse:hover {
-    background: #29aee3;
-}
-
-.pulse:hover i {
-    transition: .5s ease-in-out;
-    transform: scale(0);
-}
-
-.pulse:hover .text {
-    transform: scaleX(1);
-    transition: .5s ease-in-out;
-    opacity: 1;
-}
-
-.pulse:hover::before,
-.pulse:hover::after {
-    content: "";
-    position: absolute;
-    border: 1px solid #29aee3;
-    left: -20px;
-    right: -20px;
-    top: -20px;
-    bottom: -20px;
-    border-radius: 50%;
-    animation: pulse 1.5s linear infinite;
-}
-
-.pulse:hover::after {
-    animation-delay: .5s;
-}
-
-@keyframes phone {
-
-    0%,
-    100% {
-        transform: rotate(-20deg);
+@media (min-width: $desktop-width) {
+    .dws {
+        position: fixed;
+        top: 90%;
+        right: 0;
+        transform: translate(-90%, -90%);
+        z-index: 999;
     }
-
-    50% {
-        transform: rotate(21deg);
+    .pulse,
+    .block,
+    .phone {
+        position: absolute;
+        width: 90px;
+        height: 90px;
+        color: #fff;
+        text-align: center;
+        border-radius: 50%;
     }
-}
-
-@keyframes pulse {
-    0% {
-        transform: scale(0.5);
+    .block {
+        cursor: pointer;
+        z-index: 1;
+        overflow: hidden;
+    }
+    .pulse {
+        text-align: center;
+        background: #5cc2e2;
+        position: relative;
+        transition: 5s;
+    }
+    .phone {
+        font-size: 50px;
+        line-height: 94px;
+        animation: phone .9s ease-in-out infinite;
+    }
+    .text {
         opacity: 0;
+        position: absolute;
+        text-transform: uppercase;
+        font-weight: 700;
+        font-size: 15px;
+        top: 28px;
+        transform: scaleX(-1);
+        transition: .5s ease-in-out;
     }
-
-    50% {
+    .phone i {
+        transition: .5s ease-in-out;
+    }
+    .pulse:hover {
+        background: #29aee3;
+    }
+    .pulse:hover i {
+        transition: .5s ease-in-out;
+        transform: scale(0);
+    }
+    .pulse:hover .text {
+        transform: scaleX(1);
+        transition: .5s ease-in-out;
         opacity: 1;
     }
-
-    100% {
-        transform: scale(1.2);
-        opacity: 0;
+    .pulse:hover::before,
+    .pulse:hover::after {
+        content: "";
+        position: absolute;
+        border: 1px solid #29aee3;
+        left: -20px;
+        right: -20px;
+        top: -20px;
+        bottom: -20px;
+        border-radius: 50%;
+        animation: pulse 1.5s linear infinite;
+    }
+    .pulse:hover::after {
+        animation-delay: .5s;
+    }
+    @keyframes phone {
+        0%,
+        100% {
+            transform: rotate(-20deg);
+        }
+        50% {
+            transform: rotate(21deg);
+        }
+    }
+    @keyframes pulse {
+        0% {
+            transform: scale(0.5);
+            opacity: 0;
+        }
+        50% {
+            opacity: 1;
+        }
+        100% {
+            transform: scale(1.2);
+            opacity: 0;
+        }
     }
 }
